2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl (gl): Use defined instead of length.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl (set_links): New function.
	(config_alternatives): Use set_links instead of duped code.
	(set_alternatives): Likewise.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Refactor all code to use
	checked_mv instead of duped code.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Refactor all code to use
	checked_symlink instead of duped code.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl (checked_rm): New function. Refactor
	all code to use it instead of duped code.

2007-12-26  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-source.pl: Provide a sane default $origtargz in all
	cases when such a file exists.

2007-12-20  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-shlibdeps.pl: Always consider the shlibs of the
	current package before the shlibs of other binary packages when
	looking for a dependency.

2007-12-13  Raphael Hertzog  <hertzog@debian.org>

	* scripts/t/500_Dpkg_Path.t, scripts/Makefile.am: Add new
	non-regression tests for functions provided by the Dpkg::Path
	module.

2007-12-12  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl: Fix typo (syserror() -> syserr()).

2007-12-12  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl (spfileslistvalue): Use || to fallback to
	a default value instead of using a temporary variable and checking if
	it's not defined.

2007-12-12  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl: Use ||= instead of checking if the
	variables are not defined.
	* scripts/dpkg-gencontrol.pl: Likewise.
	* scripts/update-alternatives.pl (fill_missing_slavepaths): Likewise.

2007-12-11  Raphael Hertzog  <hertzog@debian.org>
