@@ -41,6 +41,10 @@ dpkg (1.14.13) UNRELEASED; urgency=low
   * Ignore the man pages when building without NLS support. Closes: #457673
   * Fix perl warnings:
     - Check for undefined values when reading from the alternative db.
+  * Properly handle symlinks for alternatives with inexistent slave links.
+    Closes: #76295, #246906, #433567, #451872, #220044, #392440, #441021
+    Closes: #443241
+    Based on a patch by Daniel Leidert <daniel.leidert@wgdd.de>.
 
   [ Updated dpkg translations ]
   * Swedish (Peter Karlsson)
