@@ -1,3 +1,10 @@
+2007-12-27  Daniel Leidert  <daniel.leidert@wgdd.de>
+            Guillem Jover  <guillem@debian.org>
+
+	* scripts/update-alternatives.pl: Refactor duplicate code into ...
+	(checked_alternative): ... here. New function.
+	(set_links): Call it.
+
 2007-12-27  Guillem Jover  <guillem@debian.org>
 
 	* scripts/update-alternatives.pl (gl): Use defined instead of length.
